# lpacleaner

./: .gitignore  DEPENDENCIES.md  PLAN-page-border-refinement.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: website.yml
docs/: index.html  index.xml  sitemap.xml
docs/css/: style.css
ghh/: __init__.py  __main__.py  cli.py  compare.py  config.py  flipbook.py  pipeline.py
ghh/stages/: __init__.py  analyze.py  content_area.py  deskew.py  dewarp.py  enhance.py  gentle_crop.py  lens_correct.py  normalize.py  ocr.py  omr.py  orientation.py  page_detect.py  pdf_assembly.py  perspective.py  preprocess.py  score_render.py  staff_extract.py  stitch.py
ghh/utils/: __init__.py  accel.py  image_io.py  image_utils.py  line_detect.py  page_find.py  preprocess.py  stats.py  stitch.py
lpacleaner/: cli.py  compare.py  config.py  pipeline.py
lpacleaner/stages/: __init__.py  content_area.py  deskew.py  orientation.py  page_detect.py  pdf_assembly.py  (+1 more)
tests/: test_accel.py  test_analyze.py  test_branch_pipeline.py  test_cli.py  test_compare.py  test_config.py  test_flipbook.py  test_geometry.py  test_image_io.py  test_image_utils.py  test_line_detect.py  test_omr_stage.py  test_page_find.py  test_pipeline.py  test_preprocess.py  test_quad_chain_integration.py  test_stage_content_area.py  test_stage_deskew.py  test_stage_lens_correct.py  test_stage_orientation.py  test_stage_page_detect.py  test_stage_pdf_assembly.py  test_stage_perspective.py  test_stage_preprocess.py  test_stage_staff_extract.py  test_stats.py  test_stitch.py
website/: .gitignore  hugo.toml
(+14 files in other folders)
