[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ghh"
version = "0.1.0"
description = "Automatic processing pipeline for photographed pages of historical music books"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "Pillow>=10.0",
    "tqdm>=4.65",
    "tomli>=2.0;python_version<'3.11'",
    "img2pdf>=0.5",
    "ocrmypdf>=16.0",
    "pytesseract>=0.3.10",
]

[project.optional-dependencies]
ai = [
    "openvino>=2024.0",
    "torch>=2.0",
]
historical-ocr = [
    "kraken>=5.0; python_version<'3.14'",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
ghh = "ghh.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests using large (4000x3000) images",
    "regression: tests using real book images (not in CI)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
